related issue icon alignment fix

--- a/txlege84/static/scss/pages/_bill.scss
+++ b/txlege84/static/scss/pages/_bill.scss
@@ -162,4 +162,6 @@ p {
   height: 2em;
 }
 
-
+.hot-list-graphic {
+  margin: 0 .25em -.25em;
+}
